--- a/contact.html
+++ b/contact.html
@@ -166,20 +166,10 @@
                               <address>
                                    <div class="row">
                                         <div class="col-md-4">
-                                             <p>Saturday</p>
-                                             <p>Sunday</p>
-                                             <p>Monday</p>
-                                             <p>Tuesday </p>
-                                             <p>Wednesday</p>
-                                             <p>Thursday</p>
+                                             <p>Sat - Thu</p>
                                              <p>Friday</p>
                                         </div>
                                         <div class="col-md-4">
-                                             <p>10AM–8PM</p>
-                                             <p>10AM–8PM</p>
-                                             <p>10AM–8PM</p>
-                                             <p>10AM–8PM</p>
-                                             <p>10AM–8PM</p>
                                              <p>10AM–8PM</p>
                                              <p>Closed</p>
                                         </div>
